Fix stretched loading indicator on edit dialog artwork

--- a/src/containers/artwork/style.scss
+++ b/src/containers/artwork/style.scss
@@ -9,6 +9,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
+        position: relative;
     
         &.loading {
             height: 100%;
